--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <h1>Stupid coaching</h1>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
