--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,10 +1,10 @@
 <div class="chat">
-  <p>-You</p>
+  <p>- You :</p>
   <p><%= @question %></p>
 </div>
 <br>
 <div class="chat">
-  <p>-Your coach</p>
+  <p>- The coach :</p>
   <p><%= @answer %></p>
 </div>
 
