--- a/app/views/questions/home.html.erb
+++ b/app/views/questions/home.html.erb
@@ -1,4 +1,4 @@
 
 <form action="/ask">
-  <input class="btn" type="submit" value="Visit your coach">
+  <input class="btn" type="submit" value="Meet your coach">
 </form>
